--- a/src/stack/test/Makefile
+++ b/src/stack/test/Makefile
@@ -6,19 +6,23 @@
 #    By: luicasad <luicasad@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/23 12:57:35 by luicasad          #+#    #+#              #
-#    Updated: 2024/01/24 15:33:47 by luicasad         ###   ########.fr        #
+#    Updated: 2024/01/25 10:18:32 by luicasad         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 NAME	= 	test_pss
 INCDIR	=	../../../inc/
 LIBDIR	=	../../../lib/
-LIBPSS	=	libpss.a
-LIBPRI	=	libftprintf.a
+#LIBPSS	=	libpss.a
+#LIBPRI	=	libftprintf.a
+
+LIBPSS	=	pss
+LIBPRI	=	ftprintf
 
 CC		=	cc
 CFLAGS	=	-g -Werror -Wextra -Wall
 HEADS	=	-I$(INCDIR)
-LIBS	=	-L$(LIBDIR) -l:$(LIBPSS) -l:$(LIBPRI)
+#LIBS	=	-L$(LIBDIR) -l:$(LIBPSS) -l:$(LIBPRI)
+LIBS	=	-L$(LIBDIR) -l$(LIBPSS) -l$(LIBPRI)
 SRCS	=	test_pss.c
 
 OBJS	=	test_pss.o
@@ -28,7 +32,7 @@ all: Makefile $(NAME)
 
 $(NAME): $(OBJS)
 	$(CC) -o $(NAME) $(OBJS) $(LIBS)
-	rm -f $(OBJS)
+	#rm -f $(OBJS)
 
 %.o : %.c 
 	$(CC) $(CFLAGS) -c $< -o $@ $(HEADS) 
