--- a/src/stack/test/Makefile
+++ b/src/stack/test/Makefile
@@ -6,7 +6,7 @@
 #    By: luicasad <luicasad@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/23 12:57:35 by luicasad          #+#    #+#              #
-#    Updated: 2024/01/25 10:18:32 by luicasad         ###   ########.fr        #
+#    Updated: 2024/01/26 12:07:31 by luicasad         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 NAME	= 	test_pss
@@ -17,12 +17,13 @@ LIBDIR	=	../../../lib/
 
 LIBPSS	=	pss
 LIBPRI	=	ftprintf
+LIBFT	=	ft
 
 CC		=	cc
 CFLAGS	=	-g -Werror -Wextra -Wall
 HEADS	=	-I$(INCDIR)
 #LIBS	=	-L$(LIBDIR) -l:$(LIBPSS) -l:$(LIBPRI)
-LIBS	=	-L$(LIBDIR) -l$(LIBPSS) -l$(LIBPRI)
+LIBS	=	-L$(LIBDIR) -l$(LIBPSS) -l$(LIBPRI) -l$(LIBFT)
 SRCS	=	test_pss.c
 
 OBJS	=	test_pss.o
@@ -32,7 +33,8 @@ all: Makefile $(NAME)
 
 $(NAME): $(OBJS)
 	$(CC) -o $(NAME) $(OBJS) $(LIBS)
-	#rm -f $(OBJS)
+	rm -f $(OBJS)
+	clear
 
 %.o : %.c 
 	$(CC) $(CFLAGS) -c $< -o $@ $(HEADS) 
